# LinuxApplicationDevelopment2023

./: LICENSE
01_TerminalProject/: Makefile  Show.c
02_Multifile/: Makefile
03_Text/: README.adoc  randomize.sh
04_Debugging/: .gitignore  Makefile  cmd_1.gdb  cmd_2.gdb  range.c
05_Regexps/: .gitignore  Makefile  esub.c
06_TracingFencing/: Makefile  move.c  protect.c  run_tests.sh
07_Environmental/: rhasher.c  run-tests.sh
07_Environmental_1/: Makefile.am  README.adoc  configure.ac  rhasher.c
08_I18n/: Makefile.am  README.adoc  configure.ac
08_I18n/po/: ru.po
08_I18n/src/: predictor.c
09_PatchDiff/: 1.patch  2.patch  3.patch  Makefile  maze.c
10_Testing/: Makefile.am  README.adoc  configure.ac
10_Testing/src/: Makefile.am  libbuf.c
10_Testing/test/: Makefile.am  clear_null_buf_test.ts  grow_trunc_test.ts  init_free_test.ts  pop_test.ts  push_test.ts
11_Documenting/: Doxyfile.in  Makefile.am  README.adoc  configure.ac  predictor.c  predictor.md  ru.po
