#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.71])
AC_INIT([predictor], [0.1.0], [presictor@nonext.xxx])
AC_CONFIG_SRCDIR([src/predictor.c])
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE([foreign subdir-objects])

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([libintl.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_CONFIG_FILES([Makefile])

# Checks for library functions.
AC_CHECK_FUNCS([setlocale strcasecmp])

AC_OUTPUT
